--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-plugin-inline-dotenv": "^1.5.0",
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "cuid": "^2.1.6",
     "express": "^4.17.1",
