--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cuid": "^2.1.6",
     "express": "^4.17.1",
     "is-valid-email": "0.0.5",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.4"
   },
   "jest": {
